Fixed broken links and spacing

--- a/src/style.css
+++ b/src/style.css
@@ -168,7 +168,6 @@ nav .nav-link:hover {
     font-family: var(--secondary-font);
     text-decoration: none;
     font-size: 20px;
-    display: block;
 }
 
 .work-inquiry {
@@ -248,6 +247,7 @@ nav .nav-link:hover {
 
     .contact-content {
         padding: 15px;
+        margin: 30px 0;
         text-align: center;
     }
 
